--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,17 +2,17 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/parking_management
 # Nombre del usuario de la base de datos
 spring.datasource.username=root
-# Contraseña de la base de datos
+# Contraseï¿½a de la base de datos
 spring.datasource.password=3138619952
-# Elección del driver con el que quiero trabajar
+# Elecciï¿½n del driver con el que quiero trabajar
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Visualizar consultas
 spring.jpa.show-sql=true
 # Actualizar el esquema, cada vez que ejecuto
-# ddl (Lenguaje de descripción de datos)
+# ddl (Lenguaje de descripciï¿½n de datos)
 # auto update (si cambio un cambio, se va a realizar un alter)
 # spring.jpa.hibernate.ddl-auto=update
-# create-drop nos permite borrar la tabla y volverla a crear con información
-spring.jpa.hibernate.ddl-auto=create-drop
+# create-drop nos permite borrar la tabla y volverla a crear con informaciï¿½n
+spring.jpa.hibernate.ddl-auto=update
 # Puerto del servidor
 server.port=8081
