--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,11 @@
-# CONEXION CON LA BASE DE DATOS MYSQL
-spring.datasource.url=jdbc:mysql://serverdemo2025.mysql.database.azure.com:3306/parking_management
-# Nombre del usuario de la base de datos
-spring.datasource.username=myadmin
-# Contraseï¿½a de la base de datos
-spring.datasource.password=Bd3138619952
-# Elecciï¿½n del driver con el que quiero trabajar
+
+spring.datasource.url=jdbc:mysql://localhost:3306/parking_management?characterEncoding=latin1&useConfigs=maxPerformance
+#spring.datasource.url=jdbc:mysql://localhost:3306/TestUser
+spring.datasource.username=root
+#Contraseña
+spring.datasource.password=3138619952
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-# Visualizar consultas
 spring.jpa.show-sql=true
 
-
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
