--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/parking_management?characterEncoding=latin1&useConfigs=maxPerformance
-spring.datasource.username=root
-spring.datasource.password=3138619952
+spring.datasource.url=${DB_URL_LOCAL}
+spring.datasource.username=${DB_USER_NAME_LOCAL}
+spring.datasource.password=${DB_PASSWORD_LOCAL}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
-jwt.secret=TuClaveSecretaSuperSeguraDeAlMenos256BitsParaHMACSHA256
+jwt.secret=${JWT_SECRET}
 jwt.expiration=86400000
+
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
