--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - "8080:8080"
     environment:
-      spring.datasource.url=jdbc: mysql://serverdemo2025.mysql.database.azure.com:3306/parking_management?characterEncoding=latin1&useConfigs=maxPerformance
+      spring_datasource_url: jdbc:mysql://serverdemo2025.mysql.database.azure.com:3306/parking_management?characterEncoding=latin1&useConfigs=maxPerformance
       SPRING_DATASOURCE_USERNAME: myadmin
       SPRING_DATASOURCE_PASSWORD: Bd3138619952
       SPRING_JPA_SHOW_SQL: "true"
