--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,9 @@ services:
     ports:
       - "8080:8080"
     environment:
-      spring_datasource_url: jdbc:mysql://serverdemo2025.mysql.database.azure.com:3306/parking_management?characterEncoding=latin1&useConfigs=maxPerformance
-      SPRING_DATASOURCE_USERNAME: myadmin
-      SPRING_DATASOURCE_PASSWORD: Bd3138619952
+      spring_datasource_url: jdbc:mysql://host.docker.internal:3306/parking_management?characterEncoding=latin1&useConfigs=maxPerformance
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: 3138619952
       SPRING_JPA_SHOW_SQL: "true"
       JWT_SECRET: TuClaveSecretaSuperSeguraDeAlMenos256BitsParaHMACSHA256
       JWT_EXPIRATION: "86400000"
