--- a/pom.xml
+++ b/pom.xml
@@ -84,19 +84,28 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+<!--		Dependencia driver mysql
 		<dependency>
 			<groupId>com.microsoft.sqlserver</groupId>
 			<artifactId>mssql-jdbc</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+-->
 
+<!--Driver postgres-->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 
+<!--
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.33</version>
 		</dependency>
-
+-->
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
