Se esta Desarrollando el modulo de pagos con mercado pago, se crearon las clases, los dto necesarios y se modularizaron los demas dtos, se esta desarrollando el sercivio

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,8 @@ spring.mail.password=${APP_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
+
+
+
+meli.accesToken=${ACCESS_TOKEN}
+mercado.pago.url.base=https://api.mercadopago.com/v1/payments/
