--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,17 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<!--	Dependencia de mercado pago -->
+		<dependency>
+			<groupId>com.mercadopago</groupId>
+			<artifactId>sdk-java</artifactId>
+			<version>2.1.7</version>
+		</dependency>
+
+
 	</dependencies>
+
 
 	<build>
 		<plugins>
