Se configuro exitosamente la autorizacion de la documentacion con swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,14 +9,10 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 
-
-
-
 jwt.secret.key=${TOKEN_JWT}
 jwt.expiration.time=86400000
 
 server.port=8080
-
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -30,3 +26,8 @@ spring.mail.properties.mail.smtp.starttls.required=true
 
 meli.accesToken=${ACCESS_TOKEN}
 mercado.pago.url.base=https://api.mercadopago.com/v1/payments/
+
+
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.operationsSorter=method
